# kafka_rust_cli

./: .gitignore  Cargo.toml  Makefile.toml  README.md
.github/workflows/: rust.yml
src/: args.rs  file.rs  main.rs
tests/: file_tests.rs
